Update code block style. Fix inline code style bugs in dark mode, update its style too.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -204,6 +204,13 @@
   }
 }
 
+/* Overwrite inline code font stuff */
+.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+  font-weight: 400;
+  font-size: 0.8em;
+  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
+}
+
 /* Inline code styling - make backtick code more visible */
 /* Only target inline code, not code blocks */
 p code,
@@ -215,14 +222,25 @@ h3 code,
 h4 code,
 h5 code,
 h6 code {
-  background-color: #f3f4f6;
+  /* background-color: rgb(250 250 250/1); */
+  background-color: rgba(226, 209, 244, 0.35);
   border: 1px solid #e5e7eb;
   border-radius: 4px;
   padding: 2px 6px;
-  font-size: 0.9em;
-  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
-  color: #d63384;
-  font-weight: 500;
+  /* font-size: 0.9em; */
+  /* font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace; */
+  /* color: #d63384; */
+  /* font-weight: 400; */
+}
+
+/* Overwrite Code Block Background Color */
+.prose .chroma, .prose pre {
+  background-color: rgba(226, 209, 244, 0.35);
+}
+/* Overwrite Code Block Background Color in dark mode */ 
+/* Dark Mode Specifying Code Copyed from F12 */
+:is(.dark .prose .chroma), :is(.dark .prose pre) {
+  background-color: rgb(51 65 85/1);
 }
 
 /* Remove any backticks added by CSS pseudo-elements */
@@ -248,7 +266,7 @@ h6 code::after {
 }
 
 /* Dark mode support for inline code */
-[data-theme="dark"] p code,
+/* [data-theme="dark"] p code,
 [data-theme="dark"] li code,
 [data-theme="dark"] td code,
 [data-theme="dark"] h1 code,
@@ -257,7 +275,21 @@ h6 code::after {
 [data-theme="dark"] h4 code,
 [data-theme="dark"] h5 code,
 [data-theme="dark"] h6 code {
-  background-color: #374151;
+  background-color: rgb(51 65 85/1);
   border-color: #4b5563;
   color: #f472b6;
+} */
+:is(.dark p code),
+:is(.dark li code),
+:is(.dark td code),
+:is(.dark h1 code),
+:is(.dark h2 code),
+:is(.dark h3 code),
+:is(.dark h4 code),
+:is(.dark h5 code),
+:is(.dark h6 code) {
+  background-color: rgb(51 65 85/1);
+  border-color: #4b5563;
+  /* color: #f472b6; */
+  color: rgb(255 255 255/1);
 }
